[gd_scene load_steps=2 format=3 uid="uid://splash_screen"]

[ext_resource type="Script" path="res://scenes/main/splash_screen.gd" id="1_splash"]

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_splash")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 48
text = "ARENA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 140.0
offset_right = 250.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Tactical Card Battle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -220.0
offset_right = 140.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="ModeLabel" type="Label" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Select Mode"
horizontal_alignment = 1

[node name="Button2D" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
text = "2D Classic"

[node name="Button3D" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
text = "3D Battle Chess (WIP)"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 0.7)
theme_override_font_sizes/font_size = 12
text = "Godot 4.5 Edition"
horizontal_alignment = 2
vertical_alignment = 2
